--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "react-ssr",
   "main": "index.js",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "koa": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.5"
   },
   "scripts": {
-    "dev": "nodemon ./server/app.js"
+    "dev": "nodemon ./server/app.js --exec babel-node"
   },
   "repository": {
     "type": "git",
