--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "koa": "^2.4.1"
+    "koa": "^2.4.1",
+    "koa-router": "^7.3.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "ejs": "^2.5.7",
+    "koa-static": "^4.0.2",
+    "koa-views": "^6.1.3",
     "nodemon": "^1.12.5"
   },
   "scripts": {
