--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "ejs": "^2.5.7",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
-    "nodemon": "^1.12.5"
+    "nodemon": "^1.12.5",
+    "@storybook/react": "^3.3.3",
+    "@storybook/addon-actions": "^3.3.3",
+    "@storybook/addon-links": "^3.3.3"
   },
   "scripts": {
-    "dev": "nodemon ./server/app.js --exec babel-node"
+    "dev": "nodemon ./server/app.js --exec babel-node",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
